@@ -22,6 +22,8 @@ version 1.8.5, in progress
   sample had since been changed 
 - Fix bug: wrong results from the "fcast" command after
   estimating an ordered probit or logit model
+- Fix bug: the --output option to the "gnuplot" command was
+  not being respected in the gretl console
 - win32: update GTK+ stack to 2.16.6; update gnuplot to
   CVS as of 2009-09-13
   
